Update dependencies and refactor HTTP requests to use HttpClient
- Bump version to 26.1.2-R0.1-SNAPSHOT
- Replace HttpURLConnection with HttpClient for GitHub and Mojang API
requests
- Update methods to handle InterruptedException
- Adjust tests to accommodate new method signatures